RESOLVED FIXED210114
[JSC] $.evalScript should check exception when accessing "global"
https://bugs.webkit.org/show_bug.cgi?id=210114
Summary [JSC] $.evalScript should check exception when accessing "global"
Yusuke Suzuki
Reported 2020-04-07 08:32:11 PDT
[JSC] $.evalScript should check exception when accessing "global"
Attachments
Patch (3.49 KB, patch)
2020-04-07 08:33 PDT, Yusuke Suzuki
keith_miller: review+
Yusuke Suzuki
Comment 1 2020-04-07 08:33:33 PDT
Yusuke Suzuki
Comment 2 2020-04-07 08:33:35 PDT
Yusuke Suzuki
Comment 3 2020-04-07 08:48:26 PDT
Note You need to log in before you can comment on or make changes to this bug.