[JSC] $.evalScript should check exception when accessing "global" https://bugs.webkit.org/show_bug.cgi?id=210114 <rdar://problem/61388482>

Reviewed by Keith Miller.

JSTests:

* stress/eval-script-global-access-exception-check.js: Added.
(shouldThrow):

Source/JavaScriptCore:

$.evalScript should check exception after "global" property access since it can throw an error if it is an accessor.

* jsc.cpp:
(functionDollarEvalScript):

Canonical link: https://commits.webkit.org/223014@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259636 268f45cc-cd09-0410-ab3c-d52691b4dbfc